[package]
name = "io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
futures = "0.3.21"
crc32fast = "1.3.2"
libc = "0.2.119"
io-uring = { version = "0.5", features = ["unstable"] }
tokio = { version = "1.17.0", features = ["full"] }

[profile.release]
debug = true
